Closed Bug 361470 Opened 18 years ago Closed 18 years ago

Fix Solaris build after refactoring xptcall

Categories

(Core :: XPCOM, defect)

All
Solaris
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(2 files)

After checking in Bug 349002, Solaris builds are broken. :(
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
xptcinvoke_asm_sparc_solaris.s is not in Makefile.in, so remove it.
Assignee: nobody → ginn.chen
Attachment #246255 - Flags: review?(benjamin)
Attachment #246255 - Flags: review?(benjamin) → review+
Attachment #246255 - Flags: superreview?(shaver)
Comment on attachment 246255 [details] [diff] [review]
patch

moa=timeless
Attachment #246255 - Flags: superreview?(shaver)
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attached patch Additional patchSplinter Review
Missing bits for x86. Please check in these as well. Thanks.
(In reply to comment #3)
> Created an attachment (id=246379) [edit]
> Additional patch
> 
> Missing bits for x86. Please check in these as well. Thanks.
> 

Thanks, I also found the problem and committed the patch.
I don't understand why I missed it.
I tried my patch for both x86 and sparc.
Maybe I made a mistake while combining them.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: