Bug 361470 Fix Solairs build after refactoring xptcall r=benjamin moa=timeless