xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_sparc_solaris_GCC.s
@@ -21,13 +21,13 @@
  */
 
 /* Platform specific code to invoke XPCOM methods on native objects */
-        .global XPTC_InvokeByIndex
+        .global NS_InvokeByIndex
 /*
-    XPTC_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
-                   PRUint32 paramCount, nsXPTCVariant* params);
+    NS_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
+                     PRUint32 paramCount, nsXPTCVariant* params);
     
 */
-XPTC_InvokeByIndex:
+NS_InvokeByIndex:
         save    %sp,-(64 + 32),%sp   ! room for the register window and
                                     ! struct pointer, rounded up to 0 % 32
         mov     %i2,%o0             ! paramCount
