xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_sparc_solaris_SUNW.s
@@ -22,14 +22,14 @@
 
 /* Platform specific code to invoke XPCOM methods on native objects */
 
-        .global XPTC_InvokeByIndex
-        .type   XPTC_InvokeByIndex, #function
+        .global NS_InvokeByIndex
+        .type   NS_InvokeByIndex, #function
 /*
-    XPTC_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
-                   PRUint32 paramCount, nsXPTCVariant* params);
+    NS_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
+                     PRUint32 paramCount, nsXPTCVariant* params);
     
 */
-XPTC_InvokeByIndex:
+NS_InvokeByIndex:
         save    %sp,-(64 + 32),%sp  ! room for the register window and
                                     ! struct pointer, rounded up to 0 % 32
         sll     %i2,3,%l0           ! assume the worst case
@@ -69,4 +69,4 @@ XPTC_InvokeByIndex:
         ret
         restore
 
-        .size    XPTC_InvokeByIndex, .-XPTC_InvokeByIndex
+        .size    NS_InvokeByIndex, .-NS_InvokeByIndex
