xpcom/reflect/xptcall/src/md/unix/xptcinvoke_asm_sparcv9_solaris_SUNW.s
@@ -32,15 +32,15 @@
     The SCD is available from http://www.sparc.com/.
 */
 
-        .global XPTC_InvokeByIndex
-        .type   XPTC_InvokeByIndex, #function
+        .global NS_InvokeByIndex
+        .type   NS_InvokeByIndex, #function
 
 /*
-    XPTC_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
-                   PRUint32 paramCount, nsXPTCVariant* params);
+    NS_InvokeByIndex(nsISupports* that, PRUint32 methodIndex,
+                     PRUint32 paramCount, nsXPTCVariant* params);
     
 */
-XPTC_InvokeByIndex:
+NS_InvokeByIndex:
         save    %sp,-(128 + 64),%sp ! room for the register window and
                                     ! struct pointer, rounded up to 0 % 64
         sll     %i2,4,%l0           ! assume the worst case
@@ -100,4 +100,4 @@ XPTC_InvokeByIndex:
         ret
         restore
 
-        .size    XPTC_InvokeByIndex, .-XPTC_InvokeByIndex
+        .size    NS_InvokeByIndex, .-NS_InvokeByIndex
